# python-training

./: .gitignore  7_pockekmon_eda.ipynb  8_olist_delivery_analysis.ipynb  hackathon.ipynb  pyproject.toml
dockerfiles/mysql/: Dockerfile  delete.sh  run.sh
notebooks/: 4_data_transformation.ipynb  5_feature_engineering.ipynb  6.17_df_stack.ipynb  6.1_6.6_df.ipynb  6.8_df_groupby_agg.ipynb  6_feature_engineering_2.ipynb  7_pockekmon_eda.ipynb  function.ipynb  hackathon.ipynb  notebook-sample.ipynb  pandas-basic.ipynb  property.ipynb
notebooks/Q_note/: class.ipynb
notebooks/pandas/: 4_data_transformation.ipynb  7_pockekmon_eda.ipynb  8_olist_delivery_analysis.ipynb  Main_Quest_3.ipynb
notebooks/pandas/data_set/: dating.csv
notebooks/pandas/part6/: 6_9_df_groupby_transform.ipynb
notebooks/part6/: 6_10_df_groupby_filter.ipynb  6_11_df_groupby_apply.ipynb  6_12_multi_index.ipynb  6_13_df_concat.ipynb  6_14_df_merge.ipynb  6_15_df_join.ipynb  6_16_df_pivot_table.ipynb  6_18_df_melt.ipynb  6_7_df_groupby.ipynb
notebooks/part7/: 7_1_simple_linear_regression.ipynb
notebooks/project/Main_Quest_5/: insta_cart_analysis.ipynb
notebooks/statistics/: RFM.ipynb  [실습]_상품_가격_예측하기_ipynb의_사본의_사본.ipynb  hypothesis_test.ipynb  machine_learning.ipynb  machine_learning_project.ipynb  marketing.ipynb  mobile_game_AB_testing.ipynb  olist-funnel.ipynb  pca_clustering_all_SH_kgm_final.ipynb  probability_distribution.ipynb  retail_analysis.ipynb
notebooks/statistics/Main_Quest_6/: Olist-B2B_Marketing_Funnel.ipynb  (+1 more)
queries/: market_db.sql  sample.sql
src/: fastapi-sample.py
statistics/: insta_cart_analysis.ipynb
