[tool.poetry]
name = "python-training"
version = "0.1.0"
description = ""
authors = ["suxi519 <gksthgml75@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
spicy = "^0.16.0"
kagglehub = "^0.3.9"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"
xgboost = "^2.1.4"
imblearn = "^0.0"
lightgbm = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
